[tool.poetry]
name = "index-analyzer"
version = "0.1.0"
description = "뉴스 크롤링 및 분석 파이프라인"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
requests = "^2.31.0"
pydantic = "^2.0.0"
pyyaml = "^6.0.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
crawler = "index_analyzer.daemon.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
