[package]
name = "marketpulse-desktop"
version = "0.1.0"
description = "MarketPulse Desktop"
authors = []
edition = "2021"

[lib]
name = "marketpulse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marketpulse-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
