[tool.poetry]
name = "openbb-database"
version = "0.1.0"
description = "Local database provider (PostgreSQL / SQLite) for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_database" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
openbb-core = "^1.6.10"
sqlalchemy = ">=2.0"

[tool.poetry.dependencies.psycopg2-binary]
version = ">=2.9"
optional = true

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
database = "openbb_database:database_provider"